--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc",
-    "lint": "npx eslint ",
-    "lint:fix": "npx eslint --fix",
+    "lint": "npx eslint '**/*.{tsx,ts}'",
+    "lint:fix": "npx eslint '**/*.{tsx,ts}' --fix",
     "stylelint": "stylelint './**/*.tsx'",
     "stylelint:fix:": "stylelint './**/*.tsx' --fix",
     "test": "jest --runInBand",
@@ -31,10 +31,14 @@
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "dotenv": "8.2.0",
     "eslint": "^7.1.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.7",
@@ -45,5 +49,21 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
     "tailwindcss": "^1.4.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "yarn lint:fix",
+      "git add"
+    ],
+    "*.{tsx}": [
+      "yarn stylelint:fix",
+      "git add"
+    ]
   }
 }
