--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es6": true
+        "es6": true,
+        "node": true
     },
     // "processors": ["stylelint-processor-styled-components"],
     "extends": [
@@ -24,7 +25,7 @@
         "ecmaVersion": 11,
         "sourceType": "module"
     },
-    "plugins": ["react", "@typescript-eslint", "prettier"],
+    "plugins": ["react", "@typescript-eslint", "node", "prettier"],
     "rules": {
         "indent": ["error", 4],
         "linebreak-style": ["error", "unix"],
