--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "remark": "11.0.2",
     "remark-html": "10.0.0",
     "styled-components": "^5.1.1",
+    "swr": "^0.2.2",
     "typescript": "^3.9.2"
   },
   "devDependencies": {
