--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,12 +29,16 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "single"],
+    "quotes": [
+      "error",
+      "single",
+      { "avoidEscape": true, "allowTemplateLiterals": true }
+    ],
     "semi": ["error", "always"],
     "prefer-template": ["error"],
 
     // added by me
-    "prettier/prettier": ["error", { "singleQuote": true }],
+    "prettier/prettier": ["error", { "single": true }],
     "react/prop-types": [0],
     "@typescript-eslint/explicit-module-boundary-types": "off"
   }
