--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "typecheck": "tsc",
     "lint": "npx eslint '**/*.{tsx,ts}'",
     "lint:fix": "npx eslint '**/*.{tsx,ts}' --fix",
