--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
     "gray-matter": "4.0.2",
+    "highlight.js": "^10.0.3",
+    "marked": "^1.1.0",
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -31,7 +33,9 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
+    "@types/highlight.js": "^9.12.4",
     "@types/jest": "^25.2.2",
+    "@types/marked": "^0.7.4",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
