--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,22 +40,6 @@
     // added by me
     "prettier/prettier": ["error", { "single": true }],
     "react/prop-types": [0],
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-
-    // for tailwind
-    "at-rule-no-unknown": [
-      true,
-      {
-        "ignoreAtRules": [
-          "tailwind",
-          "apply",
-          "variants",
-          "responsive",
-          "screen"
-        ]
-      }
-    ],
-    "declaration-block-trailing-semicolon": null,
-    "no-descending-specificity": null
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
