--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gray-matter": "4.0.2",
     "highlight.js": "^10.0.3",
     "marked": "^1.1.0",
+    "microcms-client": "^0.0.6",
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
