chore: add lisence MIT.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "blog-starter-typescript",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "next",
     "build": "next build",
